Adding swagger changes
