# lib/httpServer/index.js
@@ -15,7 +15,7 @@ const timeago = require('timeago.js');
 
 class HttpServer {
     constructor(node, blockchain, operator, miner) {
-        this.app = express();
+        this.app = express();//Swagger UI Express!
 
         const projectWallet = (wallet) => {
             return {
@@ -236,6 +236,34 @@ class HttpServer {
                 if (ex instanceof ArgumentError || ex instanceof TransactionAssertionError) throw new HTTPError(400, ex.message, walletId, ex);
                 else throw ex;
             }
+        });
+        //As put is idempotent , preferrable over post!
+        this.app.put('/operator/wallets/:walletId/bookRide',(req,res)=>{
+            let walletId = req.params.walletId;
+            let password = req.params.password;
+
+            if(password == null) throw new HTTPError(401, 'Wallet\'s password is missing !');
+            let passwordHash = CryptoUtil.hash(password);
+            
+            try{
+                if (!operator.checkWalletPassword(walletId, passwordHash)) throw new HTTPError(403, `Invalid password for wallet '${walletId}'`);//'' vs `
+                //below puts the transaction on the TransactionJSON!!
+                let newBookTransaction =operator.createTransaction_v1(walletId,req.body.fromAddress,req.body.toAddress,req.body.amount,
+                    req.body['changeAddress'] || req.body.fromAddress,req.body.rideInfo,'book_ride');
+
+
+                //Here itself we will check whther the hash is correct of the transaction
+                transaction.check();
+
+                let bookTransactionCreated= blockchain.addTransaction(Transaction.fromJson(newBookTransaction));
+                res.status(201).send(bookTransactionCreated);
+
+            }catch(ex){
+                if(ex instanceof ArgumentError ||  ex instanceof TransactionAssertionError) throw new HTTPError(400, ex.message, walletId,ex);
+                else throw ex;
+            }
+
+
         });
 
         this.app.get('/node/peers', (req, res) => {
